--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.1.0",
     "antd": "^5.5.0",
     "formik": "^2.2.9",
     "react": "^18.2.0",
